examples/negative/silent_contract/spawn_qualified_no_row.kai
# Silent contract (#520 audit, category 9 / effects): a
# qualified `Spawn.spawn(worker)` is called from a fn whose
# declared row does not include `Spawn`. Per
# `docs/effects-stdlib.md` §Spawn, every Spawn op surfaces the
# `Spawn` capability in the row of any fn that invokes it. The
# bare prelude form (if it existed) would already trigger
# demand; the qualified form silently swallows it (#531 family).
#
# See examples/negative/silent_contract/README.md for follow-up.

fn worker() : Int = 1

fn main() : Unit = {
  let _ = Spawn.spawn(worker)
  ()
}
